added engines to package.json

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "knex": "^0.15.2",
     "nodemon": "^1.18.5",
     "pg": "^7.6.1"
+  },
+  "engines": {
+    "node": "10.9.0",
+    "npm": "6.4.1"
   }
 }
